# hass-addon-helper

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
examples/: addon_demo.py  import_demo.py  lazy_import_demo.py
src/addon/: __init__.py  addon.py
tests/: test_src_addon.py
